--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,12 +1,12 @@
 body {
-    background-color: rgb(34, 30, 30);
-    color: black;
+    background-color: rgb(74, 71, 71);
+    color: white;
 }
 
 h1 {
     font-size: 30px;
     text-align: justify;
-    color: rgb(31, 249, 35);
+    color: rgb(9, 87, 9);
     margin: 50px 0;
     margin-top: 80px;
     display: flex;
@@ -16,7 +16,7 @@ h1 {
 
 header {
     margin: 20px 50px 20px 20px;
-    background: #cbadad;
+    background: rgb(74, 71, 71);
 
 }
 
@@ -41,7 +41,7 @@ nav button {
 
 header nav {
     background-color: #0c5e0f;
-    color: rgb(60, 57, 57);
+    color: rgb(74, 71, 71);
     padding: 10px 20px 0px 10px;
     text-align: center;
     text-decoration: none;
@@ -76,7 +76,7 @@ h2 {
 div {
     padding: 60px 60px 60px 60px;
     margin: 10px;
-    background-color: #cbadad;
+    background-color: rgb(74, 71, 71);
     border-radius: 10px;
     justify-content: center;
     display: flex;
@@ -100,7 +100,7 @@ padding: 20px 20px 20px 20px;
 footer {
     border: 5px solid #4CAF50;
     border-radius: 5px;
-    background-color: #cbadad;
+    background-color:rgb(74, 71, 71);
    
 }
 
