restructured explore html layout

--- a/css/explore.css
+++ b/css/explore.css
@@ -11,7 +11,7 @@
 .hero h1 {
     justify-self: center;
     align-self: center;
-    color: gold;
+    color: #dfd261;
     font-size: 3rem;  /* Adjust the font-size of our h1 text*/
 }
 
@@ -23,7 +23,7 @@
 }
 
 .header-container nav a {
-    color: gold;
+    color: #dfd261;
     font-size: 1.5rem;
     text-decoration: none;
 }
@@ -46,6 +46,12 @@
     margin: 2.5rem;
 }
 
+.explore-content div section {
+    border: solid 5px;
+    border-color: #dfd261;
+    border-radius: 10px;
+}
+
 .my-music-content section {
     margin: 3rem;
     padding: 50px 70px;
@@ -58,7 +64,7 @@
 }
 
 .my-music-content section button {
-    background-color: gold;
+    background-color: #dfd261;
     border-width: 5px;
     border-radius: 10px;
     border-color: black;
@@ -71,13 +77,13 @@
 }
 
 .my-music-content section button:hover {
-    color: gold;
+    color: #dfd261;
     background-color: black;
 }
 
 .header-container nav a:active {
     background-color: black;
-    color: gold;
+    color: #dfd261;
 }
 
 #new-releases {
