--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,7 +1,6 @@
 h1 {
     font-size: 30px;
     text-align: justify;
-    color: rgb(31, 249, 35);
     margin: 50px 0;
     margin-top: 80px;
     display: flex;
@@ -11,7 +10,6 @@ h1 {
 
 header {
     margin: 20px 50px 20px 20px;
-    background: #cbadad;
 
 }
 
@@ -63,13 +61,11 @@ main {
 h2 {
     margin-left: 10px;
     font-size: 25px;
-    font-size: 25px;
 }
 
 div {
-    padding: 60px 60px 60px 60px;
+    padding: 60px;
     margin: 10px;
-    background-color: #cbadad;
     border-radius: 10px;
     justify-content: center;
     display: flex;
@@ -82,23 +78,15 @@ div button {
     justify-content: center;
     font-size: 14px;
     font-weight: bold;
-    align-items: center;
-    text-decoration: initial;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
 
 }
 
 
 footer {
-    border: 5px solid #4CAF50;
+    border: 5px solid;
     border-radius: 5px;
-    background-color: #cbadad;
    
-}
-
-h3 {
-    margin-left: 10px;
-    font-size: 25px;
 }
 
  footer div button {
