--- a/css/playlist.css
+++ b/css/playlist.css
@@ -1,5 +1,50 @@
-/* My Music styles */
 
+.modal {
+    display: none; 
+    position: center;
+    z-index: 1; 
+    width: 100%; 
+    height: 100%; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #333333;
+    margin: 15%; 
+    padding: 20px;
+    border: 1px solid gold;
+    width: 70%; 
+}
+
+#open-modal-btn {
+    margin: 15% auto;
+    padding: 5px 10px; 
+    font-size: 14px;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.song-card {
+    display: flex;
+    flex-direction: column;
+    border: 5px solid #ccc;
+    padding: 10px;
+    margin: 10px 0;
+    width: 18rem;
+}
 .card {
     margin: 15px 15px;
 }
