--- a/css/explore.css
+++ b/css/explore.css
@@ -133,3 +133,13 @@
     flex-direction: row;
     justify-content: space-around;
 }
+
+.navbar a {
+    color: #ffc107;
+}
+
+.playlist-border {
+    border: 4px solid gold;
+    padding: 10px;
+    margin: 20px 20px;
+}
