styled the homepage to be more flush with the rest of the design

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,12 +1,12 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-}
+} */
 
 /* Header Styling */
-header {
+/* header {
     background-color: #333;
     color: #fff;
     padding: 20px;
@@ -20,9 +20,9 @@ h1 {
     text-transform: uppercase;
     font-weight: bold;
     padding: 0;
-}
+} */
 
-nav {
+/* nav {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +49,7 @@ nav button {
 nav button:hover {
     background-color: #ff8c00;
     color: #fff;
-}
+} */
 
 /* #signInBtn {
     position: absolute;
@@ -79,9 +79,7 @@ main {
 }
 
 h2 {
-    font-size: 28px;
     margin-bottom: 20px;
-    color: #444;
 }
 
 div.playlist-container {
@@ -118,11 +116,8 @@ div.playlist-container button:hover {
 }
 
 h3 {
-    font-size: 28px;
     margin-bottom: 0px;
     margin-top: 40px;
-    color: #444;
-
 }
 
 /* Featured Section */
