--- a/css/explore.css
+++ b/css/explore.css
@@ -135,4 +135,26 @@ main.dark {
 
 #border-control {
     margin: 20px !important;
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center;
+    align-items: center; */
+}
+
+#border-control article {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    justify-content: center;
+    align-items: center;
+    /* display: flex !important;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex: 1; */
+}
+
+#border-control article div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
